# formacao-dev-elite

./: .gitignore  skills-lock.json
aula-01/: api_call.py
aula-02/: cats.py  crocodilo.py  dogs.py
aula-03/loja-roupa/: api.py  controller.py  dev.py  enum_cores.py  pyproject.toml
aula-04/: example_01.py  example_02.py  example_04.py
aula-05/: example_01.py  example_02.py  example_04.py
aula-06/: alerta_acoes.py
aula-07/: gestao_usuarios.py
aula-08/: example_01.py  example_02.py  example_03.py
aula-09/: example_01.py
aula-11/: test_manage.py
aula-11/api/: settings.py
aula-12/: example.py  snake_game.py  snake_scores.json  test_snake_game.py
aula-12/snake_game_codex/: snake_logic.py  test_snake_game.py
aula-12/snake_game_opencode/: score_manager.py  snake_logic.py
aula-13/: .env.example  texto_para_gerar_skill.md
aula-13/app/: config.py
aula-16/: example.py
aula-17/: noticias.csv  orientacoes.md  salvar_csv.py
aula-19/: guia.md
aula-22/app/: layout.tsx
aula-23/: package.json
aula-23/app/: layout.tsx  page.tsx
aula-25/app/core/: config.py
aula-26/: pyproject.toml
aula-26/app/: main.py
aula-26/app/api/: router.py
aula-26/tests/: test_health.py
exercicio-01/: engine.py  models.py
exercicio-02/: controllers.py  exercicio.md  services.py
exercicio-03/todo-app/: package-lock.json  package.json
exercicio-04/: README.md  eslint.config.mjs
exercicio-04-resolvido/types/: produto.ts
fundamentos-dev-assistidos-por-ia/aula-01/: fluxo-desenvolvimento.md
quizz-01/: quizz.md
quizz-02/: quizz.md
quizz-03/: quizz.md
(+391 files in other folders)
